@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-09T00:54:47Z",
-  "count_outdated" : 920,
-  "uniques_outdated" : 527,
-  "count" : 931,
-  "uniques" : 538,
+  "timestamp" : "2025-05-10T00:52:27Z",
+  "count_outdated" : 921,
+  "uniques_outdated" : 528,
+  "count" : 932,
+  "uniques" : 539,
   "clones" : [
-    {
-      "timestamp": "2025-04-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-27T00:00:00Z",
       "count": 2,
@@ -88,6 +79,15 @@
     },
     {
       "timestamp": "2025-05-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
